reverse of the string

--- a/Practice_of_questions.ipynb
+++ b/Practice_of_questions.ipynb
@@ -22,6 +22,26 @@
     "print (lst,lstw)\n",
     "print(num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have enter the string  \"iqrar khan from mardan\" and the reverse of the String \"iqrar khan from mardan\" is : nadram morf nahk rarqi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# program to input string from the user and take the reverse of that also using some string formatting\n",
+    "txt =input(\"Enter the String You Want To Reverse: \")\n",
+    "khan='you have enter the string  \"{0}\" and the reverse of the String \"{0}\" is : '+txt[::-1]\n",
+    "print(khan.format(txt))"
+   ]
   }
  ],
  "metadata": {
