--- a/Practice_of_questions.ipynb
+++ b/Practice_of_questions.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iqrar r\n",
-      "(5, 2)\n"
+      "iqrar rr\n",
+      "(5, 0)\n"
      ]
     }
    ],
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you have enter the string  \"iqrar khan from mardan\" and the reverse of the String \"iqrar khan from mardan\" is : nadram morf nahk rarqi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# program to input string from the user and take the reverse of that also using some string formatting\n",
     "txt =input(\"Enter the String You Want To Reverse: \")\n",
