--- a/eveningday27.ipynb
+++ b/eveningday27.ipynb
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "57f5e5eb",
    "metadata": {},
    "outputs": [
@@ -2586,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "00e96514",
    "metadata": {},
    "outputs": [
@@ -2604,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "7beef7f7",
    "metadata": {},
    "outputs": [
@@ -2612,17 +2612,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2]\n"
+      "[2]\n"
      ]
     }
    ],
    "source": [
-    "print(mix[:2])"
+    "print(mix[1:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "d6be82a6",
    "metadata": {},
    "outputs": [
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "b0b28aed",
    "metadata": {},
    "outputs": [
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "b3b79a66",
    "metadata": {},
    "outputs": [
@@ -2701,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "efb0f142",
    "metadata": {},
    "outputs": [
@@ -2709,18 +2709,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mango', 'Apple', 'bannana', 'bannana']\n"
+      "['mango', 'bannana', 'Apple']\n"
      ]
     }
    ],
    "source": [
-    "fruit1.insert(2,\"bannana\")\n",
+    "fruit1.insert(1,\"bannana\")\n",
     "print(fruit1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "0a74a14f",
    "metadata": {},
    "outputs": [
@@ -2728,7 +2728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mango', 'Apple', 'bannana', 'bannana', 'orange', 'orange']\n"
+      "['mango', 'bannana', 'Apple', 'orange']\n"
      ]
     }
    ],
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "595e8380",
    "metadata": {},
    "outputs": [
@@ -2814,6 +2814,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "50cba650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['seeb', 'amrood', 'mango', 'kela']\n"
+     ]
+    }
+   ],
+   "source": [
+    "f1=['mango','kela']\n",
+    "f2=['seeb','amrood']\n",
+    "f2.extend(f1)\n",
+    "print(f2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "id": "f73e3371",
    "metadata": {},
@@ -2832,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "0cc3766d",
    "metadata": {},
    "outputs": [
@@ -2848,7 +2869,8 @@
     "fruit1=[\"mango\",\"Apple\"]\n",
     "fruit2=[\"bannana\",\"Peach\"]\n",
     "fruit1.append(fruit2)\n",
-    "print(fruit1)"
+    "# del fruit1[1]\n",
+    "print(fruit1)\n"
    ]
   },
   {
@@ -2863,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "id": "be25a337",
    "metadata": {
     "scrolled": true
@@ -2873,7 +2895,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mango', 'Apple', 'bannana', 'Peach', 'orange']\n",
+      "['mango', 'bannana', 'Peach', 'orange']\n",
       "[]\n"
      ]
     }
@@ -2883,14 +2905,15 @@
     "# By Default it removes last element of list and return it\n",
     "\n",
     "fruits = [\"mango\", \"Apple\", \"bannana\", \"Peach\", \"orange\"]\n",
-    "poped_list = []\n",
+    "fruits.pop(1)\n",
+    "# poped_list = []\n",
     "print(fruits)\n",
-    "print(poped_list)"
+    "# print(poped_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 38,
    "id": "b0505b4e",
    "metadata": {},
    "outputs": [
@@ -2898,8 +2921,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "['orange', 'Peach', 'bannana', 'Apple', 'mango']\n"
+      "['mango', 'bannana', 'Peach']\n",
+      "['orange']\n"
      ]
     }
    ],
@@ -2932,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 34,
    "id": "24812080",
    "metadata": {},
    "outputs": [
@@ -3109,7 +3132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "id": "eb84e987",
    "metadata": {
     "scrolled": true
@@ -3119,7 +3142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "3\n"
      ]
     }
    ],
@@ -3128,7 +3151,36 @@
     "\n",
     "vowels = ['a', 'e', 'i', 'o', 'i', 'u','o']\n",
     "\n",
-    "print(vowels.index('o',4))"
+    "print(vowels.index('o',3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fcdb3a9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"mango\" is in list and it comes 2 times \n",
+      "[0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= input('enter the name of the fruits to check whether it is in list or not')\n",
+    "fur=['mango','mango','kela','strawbery','apple']\n",
+    "indices=[]\n",
+    "if name in fur:\n",
+    "    print(f'\"{name}\" is in list and it comes {fur.count(name)} times ')\n",
+    "    for i in range(len(fur)):\n",
+    "        if fur[i] == name:\n",
+    "            indices.append(i)\n",
+    "    print(indices)\n",
+    "else:\n",
+    "    print(f'\"{name}\" is not in list')"
    ]
   },
   {
@@ -3394,7 +3446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "a2ab66e0",
    "metadata": {},
    "outputs": [
@@ -3413,7 +3465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "2647dd0f",
    "metadata": {},
    "outputs": [
@@ -3421,12 +3473,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, 3]\n",
       "1\n",
       "2\n",
       "3\n",
+      "[4, 5, 6]\n",
       "4\n",
       "5\n",
       "6\n",
+      "[7, 8, 9]\n",
       "7\n",
       "8\n",
       "9\n"
@@ -3436,6 +3491,7 @@
    "source": [
     "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
     "for sublist in matrix:\n",
+    "    print(sublist)\n",
     "    for i in sublist:\n",
     "        print(i)"
    ]
@@ -3497,7 +3553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "db55f04b",
    "metadata": {},
    "outputs": [
@@ -3506,7 +3562,7 @@
      "output_type": "stream",
      "text": [
       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]\n"
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
      ]
     }
    ],
@@ -3521,6 +3577,32 @@
     "numbers = list(range(1,11))\n",
     "print(numbers)\n",
     "print(negative_list(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0975c611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(l):\n",
+    "    sqa=[]\n",
+    "    for i in l:\n",
+    "        sqa.append(i*i)\n",
+    "    return sqa\n",
+    "num= list(range(1,11))\n",
+    "print(num)\n",
+    "print(square(num))    "
    ]
   },
   {
@@ -3561,6 +3643,14 @@
     "numbers = list(range(2,6))\n",
     "print(f\"square of {numbers} is {square_list(numbers)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a06963dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3677,6 +3767,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "dddd0342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 6, 3, 4, 2, 5, 2, 6, 10, 3]\n",
+      "[[5, 3, 5, 3], [2, 6, 4, 2, 2, 6, 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def odd_even(l):\n",
+    "    number=[]\n",
+    "    odd=[]\n",
+    "    even=[]\n",
+    "    for i in l:\n",
+    "        if i%2==0:\n",
+    "            even.append(i)\n",
+    "        elif i%2==1:\n",
+    "            odd.append(i)\n",
+    "    number.append(odd)\n",
+    "    number.append(even)\n",
+    "    return number\n",
+    "number= [2,5,6,3,4,2,5,2,6,10,3]\n",
+    "print(number)\n",
+    "print(odd_even(number))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a026e20f",
    "metadata": {},
@@ -3690,7 +3813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "id": "c1ebb2a8",
    "metadata": {},
    "outputs": [
@@ -3823,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "f7510d72",
    "metadata": {},
    "outputs": [
@@ -3831,14 +3954,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "## Solution\n",
     "def sub_list_finder(l):\n",
-    "    count = 0\n",
+    "    count = 1\n",
     "    for i in l:\n",
     "        if type(i) == list:\n",
     "            count += 1\n",
@@ -3874,7 +3997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "id": "1cf10224",
    "metadata": {},
    "outputs": [
@@ -3882,7 +4005,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "0\n"
      ]
     }
    ],
@@ -3890,12 +4013,12 @@
     "## count function\n",
     "mixed = (1,2,3,4.0,3)\n",
     "# type(mixed)\n",
-    "print(mixed.count(3))"
+    "print(mixed.count(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "id": "7446881b",
    "metadata": {},
    "outputs": [
@@ -3903,13 +4026,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "3\n"
      ]
     }
    ],
    "source": [
     "## index function\n",
-    "print(mixed.index(3))"
+    "print(mixed.index(4.0))"
    ]
   },
   {
@@ -4339,6 +4462,34 @@
    "source": [
     "num = str(numbers)\n",
     "print(type(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "617431e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n",
+      "[(2, 8), (3, 27), (4, 64), (5, 125)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cube_touple(l):\n",
+    "    cube=[]\n",
+    "    for i in l:\n",
+    "        cube.append((i,i**3))\n",
+    "    return cube\n",
+    "start= int(input('enter starting number: '))\n",
+    "end= int(input('enter ending number:'))\n",
+    "number= list(range(start,end+1))\n",
+    "print (number)\n",
+    "print(cube_touple(number))\n"
    ]
   },
   {
